fixed flickering error

--- a/public/stylesheets/portfolio.css
+++ b/public/stylesheets/portfolio.css
@@ -203,6 +203,7 @@ div.item:hover .overlay {
       margin-bottom: 20px;
       font-size: 18px;
 }
+
 .btn-default{
       /*background-color: #2a2a2a;
       border-color: #2a2a2a;*/
@@ -294,11 +295,27 @@ div.item:hover .overlay {
 }
 
 hr {
-
+    border-style:solid;
   border : 0;
   height: 1px;
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0)), color-stop(#aeecfc), to(rgba(0, 0, 0, 0)));
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), #aeecfc, rgba(0, 0, 0, 0));
+  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), #aeecfc, rgba(0, 0, 0, 0));
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #aeecfc, rgba(0, 0, 0, 0));
+  
+  
+-webkit-transform-style: preserve-3d;
+-webkit-backface-visibility: hidden;
 }
+
+.no-flickr {
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+} 
+
 
 
 footer { background-color:#0c1a1e; min-height:400px; font-family: lobster }
